Perma build bustage /builds/worker/workspace/obj-build/dist/include/mozilla/dom/quota/CheckedUnsafePtr.h:186:64: error: no viable conversion from 'const mozilla::NotNull<mozilla, when Gecko 87 merges to Beta on 2021-02-22
Categories
(Core :: Storage: localStorage & sessionStorage, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox84 | --- | unaffected |
| firefox85 | --- | unaffected |
| firefox86 | --- | unaffected |
| firefox87 | blocking | verified |
People
(Reporter: abutkovits, Assigned: janv)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file, 1 obsolete file)
central as beta simulation: https://treeherder.mozilla.org/jobs?repo=try&resultStatus=testfailed%2Cbusted%2Cexception%2Cretry%2Cusercancel%2Crunnable&revision=ad38d723be2a6082d2bf8467afddef1e59463726&selectedTaskRun=Pv0ssPw0So6aq2U3CfDIuw.0
Failure log: https://treeherder.mozilla.org/logviewer?job_id=328314767&repo=try&lineNumber=7664
[task 2021-01-30T12:15:26.128Z] 12:15:26 INFO - /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/clang++ -std=gnu++17 -o Unified_cpp_dom_localstorage0.o -c -I/builds/worker/workspace/obj-build/dist/stl_wrappers -I/builds/worker/workspace/obj-build/dist/system_wrappers -include /builds/worker/checkouts/gecko/config/gcc_hidden.h -U_FORTIFY_SOURCE -fno-common -DNDEBUG=1 -DTRIMMED=1 -DOS_POSIX=1 -DOS_LINUX=1 -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DSTATIC_EXPORTABLE_JS_API -I/builds/worker/checkouts/gecko/dom/localstorage -I/builds/worker/workspace/obj-build/dom/localstorage -I/builds/worker/workspace/obj-build/ipc/ipdl/_ipdlheaders -I/builds/worker/checkouts/gecko/ipc/chromium/src -I/builds/worker/checkouts/gecko/ipc/glue -I/builds/worker/checkouts/gecko/dom/file/ipc -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -fPIC -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/mozilla-config.h -Qunused-arguments -Qunused-arguments -Wall -Wbitfield-enum-conversion -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtype-limits -Wunreachable-code -Wunreachable-code-return -Wwrite-strings -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wno-range-loop-analysis -Wc++2a-compat -Wcomma -Wimplicit-fallthrough -Wunused-function -Wunused-variable -Werror=non-literal-null-conversion -Wstring-conversion -Wtautological-overlap-compare -Wtautological-unsigned-enum-zero-compare -Wtautological-unsigned-zero-compare -Wno-error=tautological-type-limit-compare -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=backend-plugin -Wno-error=return-std-move -Wno-error=atomic-alignment -Wno-error=deprecated-copy -Wformat -Wformat-security -Wno-gnu-zero-variadic-macro-arguments -Wno-psabi -Wno-unknown-warning-option -D_GLIBCXX_USE_CXX11_ABI=0 -fno-sized-deallocation -fno-aligned-new -fsanitize=bool,bounds,enum,integer-divide-by-zero,object-size,pointer-overflow,return,vla-bound -fno-sanitize-recover=bool,bounds,enum,integer-divide-by-zero,object-size,pointer-overflow,return,vla-bound -fsanitize-blacklist=/builds/worker/workspace/obj-build/ubsan_blacklist.txt -fsanitize=address -fcrash-diagnostics-dir=/builds/worker/artifacts -fno-exceptions -fno-strict-aliasing -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -g -Xclang -load -Xclang /builds/worker/workspace/obj-build/build/clang-plugin/libclang-plugin.so -Xclang -add-plugin -Xclang moz-check -O2 -gline-tables-only -fno-omit-frame-pointer -funwind-tables -Werror -Wno-error=shadow -MD -MP -MF .deps/Unified_cpp_dom_localstorage0.o.pp Unified_cpp_dom_localstorage0.cpp
[task 2021-01-30T12:15:26.128Z] 12:15:26 INFO - In file included from Unified_cpp_dom_localstorage0.cpp:11:
[task 2021-01-30T12:15:26.128Z] 12:15:26 INFO - In file included from /builds/worker/checkouts/gecko/dom/localstorage/ActorsParent.cpp:75:
[task 2021-01-30T12:15:26.128Z] 12:15:26 ERROR - /builds/worker/workspace/obj-build/dist/include/mozilla/dom/quota/CheckedUnsafePtr.h:186:64: error: no viable conversion from 'const mozilla::NotNull<mozilla::CheckedUnsafePtr<mozilla::dom::(anonymous namespace)::Datastore>>' to 'mozilla::dom::(anonymous namespace)::Datastore *'
[task 2021-01-30T12:15:26.128Z] 12:15:26 INFO - MOZ_IMPLICIT constexpr CheckedUnsafePtrBase(const U& aPtr) : mRawPtr(aPtr) {}
[task 2021-01-30T12:15:26.128Z] 12:15:26 INFO - ^ ~~~~
[task 2021-01-30T12:15:26.128Z] 12:15:26 INFO - /builds/worker/workspace/obj-build/dist/include/mozilla/NotNull.h:296:56: note: in instantiation of function template specialization 'mozilla::detail::CheckedUnsafePtrBase<mozilla::dom::(anonymous namespace)::Datastore, mozilla::CheckingSupport::Disabled>::CheckedUnsafePtrBase<mozilla::NotNull<mozilla::CheckedUnsafePtr<mozilla::dom::(anonymous namespace)::Datastore>>, nullptr_t>' requested here
[task 2021-01-30T12:15:26.128Z] 12:15:26 INFO - MOZ_IMPLICIT MovingNotNull(const NotNull<T>& aSrc) : mBasePtr(aSrc) {}
[task 2021-01-30T12:15:26.129Z] 12:15:26 INFO - ^
[task 2021-01-30T12:15:26.130Z] 12:15:26 INFO - /builds/worker/workspace/obj-build/dist/include/nsBaseHashtable.h:30:54: note: in instantiation of member function 'mozilla::MovingNotNull<mozilla::CheckedUnsafePtr<mozilla::dom::(anonymous namespace)::Datastore>>::MovingNotNull' requested here
[task 2021-01-30T12:15:26.130Z] 12:15:26 INFO - static UserDataType Unwrap(DataType& src) { return UserDataType(src); }
[task 2021-01-30T12:15:26.131Z] 12:15:26 INFO - ^
[task 2021-01-30T12:15:26.135Z] 12:15:26 INFO - /builds/worker/workspace/obj-build/dist/include/nsBaseHashtable.h:187:37: note: in instantiation of member function 'nsDefaultConverter<mozilla::NotNull<mozilla::CheckedUnsafePtr<mozilla::dom::(anonymous namespace)::Datastore>>, mozilla::MovingNotNull<mozilla::CheckedUnsafePtr<mozilla::dom::(anonymous namespace)::Datastore>>>::Unwrap' requested here
[task 2021-01-30T12:15:26.136Z] 12:15:26 INFO - return mozilla::Some(Converter::Unwrap(ent->mData));
[task 2021-01-30T12:15:26.136Z] 12:15:26 INFO - ^
[task 2021-01-30T12:15:26.136Z] 12:15:26 INFO - /builds/worker/checkouts/gecko/dom/localstorage/ActorsParent.cpp:2779:40: note: in instantiation of member function 'nsBaseHashtable<nsCStringHashKey, mozilla::NotNull<mozilla::CheckedUnsafePtr<mozilla::dom::(anonymous namespace)::Datastore>>, mozilla::MovingNotNull<mozilla::CheckedUnsafePtr<mozilla::dom::(anonymous namespace)::Datastore>>, nsDefaultConverter<mozilla::NotNull<mozilla::CheckedUnsafePtr<mozilla::dom::(anonymous namespace)::Datastore>>, mozilla::MovingNotNull<mozilla::CheckedUnsafePtr<mozilla::dom::(anonymous namespace)::Datastore>>>>::MaybeGet' requested here
[task 2021-01-30T12:15:26.136Z] 12:15:26 INFO - auto maybeDatastore = gDatastores->MaybeGet(aOrigin);
[task 2021-01-30T12:15:26.136Z] 12:15:26 INFO - ^
[task 2021-01-30T12:15:26.137Z] 12:15:26 INFO - /builds/worker/workspace/obj-build/dist/include/mozilla/NotNull.h:163:13: note: candidate function
[task 2021-01-30T12:15:26.138Z] 12:15:26 INFO - constexpr operator const T&() const { return get(); }
[task 2021-01-30T12:15:26.138Z] 12:15:26 INFO - ^
[task 2021-01-30T12:15:26.138Z] 12:15:26 INFO - 1 error generated.
[task 2021-01-30T12:15:26.138Z] 12:15:26 INFO - /builds/worker/checkouts/gecko/config/rules.mk:674: recipe for target 'Unified_cpp_dom_localstorage0.o' failed
[task 2021-01-30T12:15:26.138Z] 12:15:26 ERROR - make[4]: *** [Unified_cpp_dom_localstorage0.o] Error 1
[task 2021-01-30T12:15:26.139Z] 12:15:26 INFO - make[4]: Leaving directory '/builds/worker/workspace/obj-build/dom/localstorage'
[task 2021-01-30T12:15:26.140Z] 12:15:26 INFO - /builds/worker/checkouts/gecko/config/recurse.mk:72: recipe for target 'dom/localstorage/target-objects' failed
[task 2021-01-30T12:15:26.140Z] 12:15:26 ERROR - make[3]: *** [dom/localstorage/target-objects] Error 2
| Reporter | ||
Updated•5 years ago
|
| Reporter | ||
Updated•5 years ago
|
| Reporter | ||
Updated•5 years ago
|
| Assignee | ||
Comment 1•5 years ago
|
||
Updated•5 years ago
|
| Comment hidden (Intermittent Failures Robot) |
Comment 3•5 years ago
|
||
Patch works in today's central-as-early-beta simulation:
https://treeherder.mozilla.org/jobs?repo=try&group_state=expanded&revision=74d7ed45a694c4c0fb3589d53a079c0dfaec7b71&searchStr=build
| Comment hidden (Intermittent Failures Robot) |
| Assignee | ||
Comment 5•5 years ago
|
||
Depends on D103556
Updated•5 years ago
|
Updated•5 years ago
|
Comment 7•5 years ago
|
||
| bugherder | ||
Comment 8•5 years ago
|
||
Verified fixed with yesterday's central-as-beta simulation.
Updated•5 years ago
|
Updated•5 years ago
|
Description
•