Bug 1689802 - Fix construction of MovingNotNull from NotNull; r=sg

Depends on D103556

Differential Revision: https://phabricator.services.mozilla.com/D103632